--- a/index.ipynb
+++ b/index.ipynb
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = None"
+    "number_of_weeks = 5"
    ]
   },
   {
